# habiting

./: .gitignore  Cargo.toml  justfile
crates/habiting-client/: Cargo.toml
crates/habiting-client/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  prelude.rs  session_service.rs
crates/habiting-client/src/session_service/: session_start.rs  session_stop.rs
crates/habiting-client/src/tag_service/: mod.rs  tag_create.rs  tag_delete.rs  tag_list.rs  tag_update.rs
crates/habiting-server/: Cargo.toml  build.rs
crates/habiting-server/.sqlx/: query-05740a5ad2e548950adb52074bfbf98e402b71a0792824fdc1e82f574283d781.json  query-22feb159dc51c8ad4dc8eda028c09bf7d255cf0764346ee0377102d8b8ad0e87.json  query-30515e98a71093906e9e58272abb92d67d0849ff770e11027baceb52dfdd6215.json  query-52958684fa52b7a4753cd4356482dc6c655102a501d8aa48e03b1fb3dbbad02d.json  query-6238882b10da9d2607d4e8ff5ed77f7e1c751316391536038259b15f5b282a57.json  query-695cc5308930129d82a4a00886ac3ad674d29b10f45a902c514f6e6e36e67a4f.json  query-8118598ac8b671cc62b35d9b801313876395688d6251416265395b1541e938d6.json  query-c17e6698e92a1909fc479a95b85e255386389807e1212b6dee4eb20f24375838.json  query-decba37db5163ca0cf24186b9b7cd9cf926c35ecc5c836efe07786907f64414f.json
crates/habiting-server/fixtures/: basic.sql  tags.sql
crates/habiting-server/migrations/: 20260228034650_tags.sql  20260301033331_sessions.sql
crates/habiting-server/src/: config.rs  errors.rs  lib.rs  logger.rs  main.rs  prelude.rs
crates/habiting-server/src/session_service/: mod.rs  session_start.rs  session_stop.rs
nix/: devshell.nix  (+4 more)
(+17 files in other folders)
