[package]
name = "habiting-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
clap = {version = "4.5.60", features = ["derive"]}
prost = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tonic = {workspace = true}
tonic-prost = {workspace = true}

[build-dependencies]
tonic-prost-build = {workspace = true}
